fixed responsive alignment issues

--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,6 @@
-@media (min-width: 576px) {
-  .image {
-    min-width: 15%;
-  }
+img {
+  margin: auto;
 }
-
-@media (min-width: 768px) {
-  .image {
-    max-width: 20%;
-  }
-}
-
 body {
   background-color: rgb(255, 218, 150) !important;
 }
